--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ testdata/cheats/Vm.sol linguist-generated
 
 # See <https://git-scm.com/docs/gitattributes#_defining_a_custom_hunk_header>
 *.rs diff=rust
+
+bun.lock linguist-language=JSON-with-Comments
