--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -196,6 +196,12 @@ jobs:
             echo "file_name=foundry_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.zip" >> $GITHUB_OUTPUT
           fi
 
+      - name: Upload Forge Binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: forge-${{ matrix.target }}
+          path: forge-bin/
+
       - name: Build man page
         id: man
         if: matrix.target == 'x86_64-unknown-linux-gnu'
@@ -250,6 +256,11 @@ jobs:
           files: |
             ${{ steps.artifacts.outputs.file_name }}
             ${{ steps.man.outputs.foundry_man }}
+
+  publish-npm:
+    name: Publish npm
+    needs: release
+    uses: ./.github/workflows/npm-publish.yml
 
   cleanup:
     name: Release cleanup
