--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,10 @@
 crates/cheatcodes/assets/*.json linguist-generated
 testdata/cheats/Vm.sol linguist-generated
+bun.lock linguist-generated
 
 # See <https://git-scm.com/docs/gitattributes#_defining_a_custom_hunk_header>
 *.rs diff=rust
 crates/lint/testdata/* text eol=lf
-
-bun.lock linguist-language=JSON-with-Comments
 
 .env.example linguist-generated=Dotenv
 dprint.json linguist-language=JSON-with-Comments
